--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Al Fusion BD AI</title>
     <style>
         :root { --p: #ff0000; --b: #121212; --c: #1e1e1e; }
-        body { background: var(--b); color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); font-size: 1.2rem; font-weight: bold; color: var(--p); }
+        body { background: var(--b); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); color: var(--p); font-weight: bold; font-size: 1.2rem; }
         #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
         .msg { max-width: 85%; padding: 12px 16px; border-radius: 20px; font-size: 15px; line-height: 1.5; word-wrap: break-word; }
         .user { align-self: flex-end; background: #333; color: white; border-bottom-right-radius: 2px; }
@@ -20,46 +20,53 @@
 </head>
 <body>
 
-    <header>Al Fusion BD AI Assistant</header>
+<header>Al Fusion BD AI Assistant</header>
+<div id="chat-window">
+    <div class="msg ai">হ্যালো! আমি Al Fusion BD AI। আজ আপনাকে কীভাবে সাহায্য করতে পারি?</div>
+</div>
 
-    <div id="chat-window">
-        <div class="msg ai">হ্যালো! আমি Al Fusion BD AI। আজ আপনাকে কীভাবে সাহায্য করতে পারি?</div>
-    </div>
+<div class="input-area">
+    <input type="text" id="user-input" placeholder="আপনার প্রশ্নটি লিখুন...">
+    <button onclick="sendMessage()">Send</button>
+</div>
 
-    <div class="input-area">
-        <input type="text" id="user-input" placeholder="আপনার প্রশ্নটি লিখুন...">
-        <button onclick="sendMessage()">Send</button>
-    </div>
+<script>
+    const API_KEY = "AIzaSyBsfBSmUxzFp2BqyJqq9fc1xUDZwHNWjIM";
+    const chatWindow = document.getElementById('chat-window');
+    const userInput = document.getElementById('user-input');
 
-    <script>
-        const chatWindow = document.getElementById('chat-window');
-        const userInput = document.getElementById('user-input');
+    function addMessage(text, type) {
+        const div = document.createElement('div');
+        div.className = 'msg ' + type;
+        div.textContent = text;
+        chatWindow.appendChild(div);
+        chatWindow.scrollTop = chatWindow.scrollHeight;
+    }
 
-        function addMessage(text, type) {
-            const div = document.createElement('div');
-            div.className = 'msg ' + type;
-            div.textContent = text;
-            chatWindow.appendChild(div);
-            chatWindow.scrollTop = chatWindow.scrollHeight;
+    async function sendMessage() {
+        const msg = userInput.value.trim();
+        if (!msg) return;
+
+        addMessage(msg, 'user');
+        userInput.value = '';
+
+        try {
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ contents: [{ parts: [{ text: msg }] }] })
+            });
+
+            const data = await response.json();
+            const aiText = data.candidates[0].content.parts[0].text;
+            addMessage(aiText, 'ai');
+        } catch (e) {
+            addMessage("দুঃখিত, কোনো সমস্যা হয়েছে। দয়া করে আবার চেষ্টা করুন।", 'ai');
         }
+    }
 
-        function sendMessage() {
-            const msg = userInput.value.trim();
-            if (!msg) return;
+    userInput.addEventListener('keypress', (e) => { if (e.key === 'Enter') sendMessage(); });
+</script>
 
-            addMessage(msg, 'user');
-            userInput.value = '';
-
-            // ডামি এআই রেসপন্স
-            setTimeout(() => {
-                const response = "আপনি বলেছেন: '" + msg + "'। আমি বর্তমানে এটি নিয়ে কাজ করছি। খুব শীঘ্রই Al Fusion BD-এর পূর্ণাঙ্গ AI সেবা এখানে চালু হবে!";
-                addMessage(response, 'ai');
-            }, 800);
-        }
-
-        userInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') sendMessage();
-        });
-    </script>
 </body>
 </html>
