--- a/index.html
+++ b/index.html
@@ -70,3 +70,21 @@
 
 </body>
 </html>
+/* নিচের এই অংশটুকু আপনার index.html ফাইলের <style> ট্যাগের ভেতরে বসান */
+.input-area { 
+    padding: 20px; 
+    background: var(--c); 
+    display: flex; 
+    gap: 10px; 
+    border-top: 1px solid #333;
+    padding-bottom: 30px; /* নিচে বাড়তি জায়গা যোগ করা হয়েছে */
+}
+input { 
+    flex: 1; 
+    padding: 15px 20px; /* বক্সটি মোটা করা হয়েছে */
+    border-radius: 10px; 
+    border: 1px solid #444; 
+    background: #2a2a2a; 
+    color: white; 
+    font-size: 16px; /* লেখা বড় করা হয়েছে */
+}
