--- a/index.html
+++ b/index.html
@@ -2,89 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Al Fusion BD AI</title>
     <style>
-        :root { --p: #ff0000; --b: #121212; --c: #1e1e1e; }
-        body { background: var(--b); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); color: var(--p); font-weight: bold; font-size: 1.2rem; }
-        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
-        .msg { max-width: 85%; padding: 12px 16px; border-radius: 20px; font-size: 15px; line-height: 1.5; word-wrap: break-word; }
-        .user { align-self: flex-end; background: #333; color: white; border-bottom-right-radius: 2px; }
-        .ai { align-self: flex-start; background: var(--p); color: white; border-bottom-left-radius: 2px; }
-        .input-area { padding: 15px; background: var(--c); display: flex; gap: 10px; border-top: 1px solid #333; }
-        input { flex: 1; padding: 12px 18px; border-radius: 25px; border: none; background: #2a2a2a; color: white; outline: none; }
-        button { background: var(--p); color: white; border: none; padding: 10px 22px; border-radius: 25px; cursor: pointer; font-weight: bold; transition: 0.3s; }
-        button:hover { opacity: 0.8; }
+        :root { --p: #ff0000; --b: #000000; --c: #1a1a1a; }
+        body { background: var(--b); color: white; font-family: Arial, sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); color: var(--p); font-weight: bold; font-size: 1.3rem; }
+        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; padding-bottom: 150px; }
+        .msg { max-width: 80%; padding: 12px 16px; border-radius: 15px; font-size: 16px; }
+        .user { align-self: flex-end; background: #333; color: white; }
+        .ai { align-self: flex-start; background: var(--p); color: white; }
+        
+        /* Box moved higher for easier mobile access */
+        .input-area { 
+            position: fixed; bottom: 40px; left: 15px; right: 15px;
+            padding: 10px; background: #222; display: flex; gap: 8px; 
+            border-radius: 20px; border: 1px solid #444;
+            box-shadow: 0 -5px 25px rgba(0,0,0,0.8);
+        }
+        input { flex: 1; height: 50px; padding: 0 15px; border: none; background: transparent; color: white; font-size: 16px; outline: none; }
+        button { background: var(--p); color: white; border: none; padding: 0 20px; border-radius: 15px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
-<header>Al Fusion BD AI Assistant</header>
+<header>Al Fusion BD AI</header>
 <div id="chat-window">
-    <div class="msg ai">হ্যালো! আমি Al Fusion BD AI। আজ আপনাকে কীভাবে সাহায্য করতে পারি?</div>
+    <div class="msg ai">System ready. Please type your message below.</div>
 </div>
 
 <div class="input-area">
-    <input type="text" id="user-input" placeholder="আপনার প্রশ্নটি লিখুন...">
+    <input type="text" id="user-input" placeholder="Type here...">
     <button onclick="sendMessage()">Send</button>
 </div>
 
 <script>
-    const API_KEY = "AIzaSyBsfBSmUxzFp2BqyJqq9fc1xUDZwHNWjIM";
-    const chatWindow = document.getElementById('chat-window');
-    const userInput = document.getElementById('user-input');
-
-    function addMessage(text, type) {
-        const div = document.createElement('div');
-        div.className = 'msg ' + type;
-        div.textContent = text;
-        chatWindow.appendChild(div);
-        chatWindow.scrollTop = chatWindow.scrollHeight;
-    }
+    const API_KEY = "AIzaSyBsfBSmUxzFp2BqyJqq9fc1xUDZwHNWjIM"; //
 
     async function sendMessage() {
-        const msg = userInput.value.trim();
+        const input = document.getElementById('user-input');
+        const msg = input.value.trim();
         if (!msg) return;
 
         addMessage(msg, 'user');
-        userInput.value = '';
+        input.value = '';
 
         try {
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ contents: [{ parts: [{ text: msg }] }] })
             });
-
-            const data = await response.json();
+            const data = await res.json();
             const aiText = data.candidates[0].content.parts[0].text;
             addMessage(aiText, 'ai');
         } catch (e) {
-            addMessage("দুঃখিত, কোনো সমস্যা হয়েছে। দয়া করে আবার চেষ্টা করুন।", 'ai');
+            addMessage("Error: API Key is not responding. Please check your Google AI Studio settings.", 'ai');
         }
     }
 
-    userInput.addEventListener('keypress', (e) => { if (e.key === 'Enter') sendMessage(); });
+    function addMessage(text, type) {
+        const win = document.getElementById('chat-window');
+        const div = document.createElement('div');
+        div.className = 'msg ' + type;
+        div.textContent = text;
+        win.appendChild(div);
+        win.scrollTop = win.scrollHeight;
+    }
 </script>
-
 </body>
 </html>
-/* নিচের এই অংশটুকু আপনার index.html ফাইলের <style> ট্যাগের ভেতরে বসান */
-.input-area { 
-    padding: 20px; 
-    background: var(--c); 
-    display: flex; 
-    gap: 10px; 
-    border-top: 1px solid #333;
-    padding-bottom: 30px; /* নিচে বাড়তি জায়গা যোগ করা হয়েছে */
-}
-input { 
-    flex: 1; 
-    padding: 15px 20px; /* বক্সটি মোটা করা হয়েছে */
-    border-radius: 10px; 
-    border: 1px solid #444; 
-    background: #2a2a2a; 
-    color: white; 
-    font-size: 16px; /* লেখা বড় করা হয়েছে */
-}
