--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
         :root { --p: #ff0000; --b: #000000; --c: #1a1a1a; }
         body { background: var(--b); color: white; font-family: Arial, sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); color: var(--p); font-weight: bold; font-size: 1.3rem; }
-        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; padding-bottom: 150px; }
-        .msg { max-width: 80%; padding: 12px 16px; border-radius: 15px; font-size: 16px; }
-        .user { align-self: flex-end; background: #333; color: white; }
-        .ai { align-self: flex-start; background: var(--p); color: white; }
         
-        /* Box moved higher for easier mobile access */
+        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; padding-bottom: 180px; }
+        .msg { max-width: 80%; padding: 12px 16px; border-radius: 15px; font-size: 16px; line-height: 1.4; }
+        .user { align-self: flex-end; background: #333; color: white; border-bottom-right-radius: 2px; }
+        .ai { align-self: flex-start; background: var(--p); color: white; border-bottom-left-radius: 2px; }
+
+        /* বক্সটি নিচ থেকে ৬০ পিক্সেল উপরে সরানো হয়েছে */
         .input-area { 
-            position: fixed; bottom: 40px; left: 15px; right: 15px;
+            position: fixed; bottom: 60px; left: 15px; right: 15px;
             padding: 10px; background: #222; display: flex; gap: 8px; 
-            border-radius: 20px; border: 1px solid #444;
+            border-radius: 15px; border: 1px solid #444;
             box-shadow: 0 -5px 25px rgba(0,0,0,0.8);
         }
-        input { flex: 1; height: 50px; padding: 0 15px; border: none; background: transparent; color: white; font-size: 16px; outline: none; }
-        button { background: var(--p); color: white; border: none; padding: 0 20px; border-radius: 15px; cursor: pointer; font-weight: bold; }
+        input { flex: 1; height: 55px; padding: 0 15px; border: none; background: transparent; color: white; font-size: 16px; outline: none; }
+        button { background: var(--p); color: white; border: none; padding: 0 20px; border-radius: 10px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
-<header>Al Fusion BD AI</header>
+<header>Al Fusion BD AI Assistant</header>
 <div id="chat-window">
-    <div class="msg ai">System ready. Please type your message below.</div>
+    <div class="msg ai">Hello! I am Al Fusion BD AI. How can I help you today?</div>
 </div>
 
 <div class="input-area">
-    <input type="text" id="user-input" placeholder="Type here...">
+    <input type="text" id="user-input" placeholder="Type message here...">
     <button onclick="sendMessage()">Send</button>
 </div>
 
 <script>
-    const API_KEY = "AIzaSyBsfBSmUxzFp2BqyJqq9fc1xUDZwHNWjIM"; //
+    // আপনার নতুন এবং সঠিক API Key এখানে বসানো হয়েছে
+    const API_KEY = "AIzaSyC94p8JMAMNUQkumHwYEDmcjjRMiRONtVk"; 
 
     async function sendMessage() {
         const input = document.getElementById('user-input');
@@ -54,10 +56,14 @@
                 body: JSON.stringify({ contents: [{ parts: [{ text: msg }] }] })
             });
             const data = await res.json();
-            const aiText = data.candidates[0].content.parts[0].text;
-            addMessage(aiText, 'ai');
+            
+            if (data.candidates && data.candidates[0].content.parts[0].text) {
+                addMessage(data.candidates[0].content.parts[0].text, 'ai');
+            } else {
+                addMessage("API key error. Please check your settings.", 'ai');
+            }
         } catch (e) {
-            addMessage("Error: API Key is not responding. Please check your Google AI Studio settings.", 'ai');
+            addMessage("Connection error. Please try again.", 'ai');
         }
     }
 
