--- a/index.html
+++ b/index.html
@@ -8,38 +8,29 @@
         :root { --p: #ff0000; --b: #000000; --c: #1a1a1a; }
         body { background: var(--b); color: white; font-family: Arial, sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         header { padding: 15px; background: var(--c); text-align: center; border-bottom: 2px solid var(--p); color: var(--p); font-weight: bold; font-size: 1.3rem; }
-        
         #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; padding-bottom: 180px; }
         .msg { max-width: 80%; padding: 12px 16px; border-radius: 15px; font-size: 16px; line-height: 1.4; }
         .user { align-self: flex-end; background: #333; color: white; border-bottom-right-radius: 2px; }
         .ai { align-self: flex-start; background: var(--p); color: white; border-bottom-left-radius: 2px; }
-
-        /* বক্সটি নিচ থেকে ৬০ পিক্সেল উপরে সরানো হয়েছে */
-        .input-area { 
-            position: fixed; bottom: 60px; left: 15px; right: 15px;
-            padding: 10px; background: #222; display: flex; gap: 8px; 
-            border-radius: 15px; border: 1px solid #444;
-            box-shadow: 0 -5px 25px rgba(0,0,0,0.8);
-        }
+        .input-area { position: fixed; bottom: 60px; left: 15px; right: 15px; padding: 10px; background: #222; display: flex; gap: 8px; border-radius: 15px; border: 1px solid #444; box-shadow: 0 -5px 25px rgba(0,0,0,0.8); }
         input { flex: 1; height: 55px; padding: 0 15px; border: none; background: transparent; color: white; font-size: 16px; outline: none; }
         button { background: var(--p); color: white; border: none; padding: 0 20px; border-radius: 10px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
-<header>Al Fusion BD AI Assistant</header>
+<header>Al Fusion BD AI (Llama 3.3)</header>
 <div id="chat-window">
-    <div class="msg ai">Hello! I am Al Fusion BD AI. How can I help you today?</div>
+    <div class="msg ai">Hello! I am Llama 3.3. How can I assist Al Fusion BD today?</div>
 </div>
 
 <div class="input-area">
-    <input type="text" id="user-input" placeholder="Type message here...">
+    <input type="text" id="user-input" placeholder="Type here...">
     <button onclick="sendMessage()">Send</button>
 </div>
 
 <script>
-    // আপনার নতুন এবং সঠিক API Key এখানে বসানো হয়েছে
-    const API_KEY = "AIzaSyC94p8JMAMNUQkumHwYEDmcjjRMiRONtVk"; 
+    const OPENROUTER_API_KEY = "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"; 
 
     async function sendMessage() {
         const input = document.getElementById('user-input');
@@ -50,17 +41,23 @@
         input.value = '';
 
         try {
-            const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ contents: [{ parts: [{ text: msg }] }] })
+            const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${OPENROUTER_API_KEY}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    "model": "meta-llama/llama-3.3-70b-instruct:free", // এখানে আপনার মডেলটি দিয়েছি
+                    "messages": [{ "role": "user", "content": msg }]
+                })
             });
-            const data = await res.json();
+            const data = await response.json();
             
-            if (data.candidates && data.candidates[0].content.parts[0].text) {
-                addMessage(data.candidates[0].content.parts[0].text, 'ai');
+            if (data.choices && data.choices[0].message.content) {
+                addMessage(data.choices[0].message.content, 'ai');
             } else {
-                addMessage("API key error. Please check your settings.", 'ai');
+                addMessage("API Error: Model might be busy.", 'ai');
             }
         } catch (e) {
             addMessage("Connection error. Please try again.", 'ai');
